--- a/style.css
+++ b/style.css
@@ -200,11 +200,11 @@ p {
 
 /* Hero Section */
 #hero {
-	background-image: url(/img/img3.png);
+	background-image: url('img/img3.png');
 	background-size: cover;
 	background-position: center;
 	width: 100vw;
-	height: 100vw;
+	height: 100vh;
 	position: relative;
 	z-index: 1;
 }
